--- a/app/views/auth/signin.html.erb
+++ b/app/views/auth/signin.html.erb
@@ -18,7 +18,7 @@
 						<input class="form-control input-lg" id="password" placeholder="*********" type="password" required>
 					</div>
 
-					<button class="btn btn-primary btn-lg signin-button" onclick="javascript: document.location = '/'">
+					<button class="btn btn-primary btn-lg signin-button" type="submit">
 						Login
 					</button>
 					
