--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,12 +12,12 @@
 		<div class="row">
 			<div class="col-md-12">
 
-				<table class="table table-bordered schedule_table">
+				<table id="schedule-table" class="table table-striped table-bordered schedule-table">
 					<thead>
 						<tr>
-							<th>Horários</th>
-							<% %w[Segunda Terça Quarta Quinta Sexta].each do |week_day| %>
-								<th><%= week_day %></th>
+							<th><%= t 'home.schedule.hours' %></th>
+							<% days_of_week(Date.today.cweek).each do |week_day| %>
+								<th><%= l week_day, format: '%A' %><br><small class="text-muted"><%= l week_day, format: '%d/%m/%Y' %></small></th>
 							<% end %>
 						</tr>
 					</thead>
@@ -26,11 +26,11 @@
 						<% (6..23).each do |hour| %>
 						<tr>
 							<td><%= sprintf("%0d:00", hour) %></td>
-							<td></td>
-							<td></td>
-							<td></td>
-							<td></td>
-							<td></td>
+							<% (1..5).each do %> 
+								<td class="js-add-schedule">
+									<a href="#" data-starts-at="">Agendar horário</a>
+								</td>
+							<% end %>
 						</tr>
 						<% end %>
 					</tbody>
@@ -44,8 +44,34 @@
 
 
 <!-- action button -->
-<%= render partial: 'partial/action_button' %>
+<%# render partial: 'partial/action_button' %>
 
 <!-- action button -->
 <%= render partial: 'partial/footer' %>
+
+<!-- schedule modal window -->
+<div id="modal-schedule" class="modal fade" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+				<h4 class="modal-title">Reservar Sala - Horário {} </h4>
+      </div>
+      <div class="modal-body">
+				<div class="form-group">
+					<div class="alert alert-info">Verifique as informações e pressione 'Agendar Sala' para concluir a sua reserva.</div>
+				</div>
+				<div class="form-group">
+					<label for="">Descrição</label>
+					<textarea id="schedule_description" name="description" cols="30" rows="5" class="form-control"></textarea>
+				</div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+        <button type="button" class="btn btn-primary">Agendar Sala</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 
